Fixed Text not showing correctly on slides at the top of vertical slides when using markdown format

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -402,6 +402,7 @@ html:-moz-full-screen-ancestor {
 	text-align: center;
 	perspective: 600px;
 	perspective-origin: 50% 40%;
+	transform-style: preserve-3d;
 }
 
 .reveal .slides>section {
@@ -416,7 +417,7 @@ html:-moz-full-screen-ancestor {
 	padding: 20px 0px;
 
 	z-index: 10;
-	transform-style: preserve-3d;
+	transform-style: flat;
 	transition: transform-origin 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985),
 				transform 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985),
 				visibility 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985),
@@ -850,6 +851,7 @@ html:-moz-full-screen-ancestor {
 	top: 0;
 	left: 0;
 	perspective: 600px;
+	transform-style: preserve-3d;
 }
 	.reveal .slide-background {
 		display: none;
@@ -1019,6 +1021,7 @@ html:-moz-full-screen-ancestor {
 .reveal.overview {
 	perspective-origin: 50% 50%;
 	perspective: 700px;
+	transform-style: preserve-3d;
 
 	.slides section {
 		height: 100%;
